tests/bad/func_ret_type.ae
/// fail: Return type bool does not match function return type i32

def main() : i32 {
    let x: i32 = 5
    let y: i32 = 7
    let z: bool = true
    {
        let p: i32 = 3
    }
    return z
}
